refactor: stabilize upload and report workflows